--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,14 @@
 /node_modules
 /public/hot
-/public/.htaccess
 /public/storage
 /storage/*.key
 /vendor
-/.idea
-/.vagrant
+.env
+.env.backup
+.phpunit.result.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-.env
-composer.lock
-package-lock.json
-/public/mix-manifest.json
-
-/public/assets/uploads
-/public/img/live-logos/talents
-/public/js/app.js
-/public/css/app.css
-/public/sitemap.xml
-/public/.htaccess
+.vs
+.idea
